--- a/perfume.html
+++ b/perfume.html
@@ -87,6 +87,6 @@
                 <a class="fas fa-arrow-circle-left"></a>   
            </div>
        </div>
-       <h1>Probando esto</h1>
+       <h1>Probando</h1>
     </footer>
 </html>
